modules/k8s-infra/07-components-ingress/02-dashboard-ingress-public.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-metrics-ingress-public
  namespace: kubernetes-dashboard
  annotations:    
    # cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/dashboard)$ $1/ redirect;
  labels:
    app: kubernetes-dashboard-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ${host}
      http:
        paths:
          - path: /dashboard(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                # name: kubernetes-dashboard
                name: k8s-dashboard-kubernetes-dashboard
                port:
                  number: 443

  tls:
  - hosts:
    - ${host}
    secretName: dashboard-cert-tsl
